--- a/TestMdfEntityFramework/Views/Home.xaml
+++ b/TestMdfEntityFramework/Views/Home.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TestMdfEntityFramework.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="544" d:DesignWidth="670"
+             d:DesignHeight="550" d:DesignWidth="950"
              Background="Transparent">
     <Border CornerRadius="0,0,0,0">
         <Border.Background>
@@ -14,15 +14,13 @@
                 <GradientStop Color="White" Offset="1"/>
             </LinearGradientBrush>
         </Border.Background>
-        <Grid x:Name="GridConfiguracion">
+        <Grid x:Name="GridConfiguracion" VerticalAlignment="Top">
             <!--#region COLS ROWS-->
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="10"/>
-                <ColumnDefinition/>
-                <ColumnDefinition Width="10"/>
+                <ColumnDefinition Width="925"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="40"/>
+                <RowDefinition Height="10"/>
                 <RowDefinition/>
                 <RowDefinition Height="10"/>
             </Grid.RowDefinitions>
@@ -36,12 +34,13 @@
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"/>-->
             <!--#endregion-->
-            <Grid Grid.Column="1" Grid.Row="1" x:Name="Dashboard">
+            <Grid Grid.Column="0" Grid.Row="1" x:Name="Dashboard"
+                  VerticalAlignment="Top">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="670" />
+                    <ColumnDefinition Width="950" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="144" />
+                    <RowDefinition Height="150" />
                     <RowDefinition Height="400" />
                 </Grid.RowDefinitions>
 
