--- a/TestMdfEntityFramework/Views/vwAsignaciones.xaml
+++ b/TestMdfEntityFramework/Views/vwAsignaciones.xaml
@@ -233,7 +233,7 @@
             <TextBlock Grid.Row="9"
                        Grid.Column="1"
                        Text="Folio:"
-                       Foreground="White"
+                       Foreground="Black"
                        FontSize="30"
                        HorizontalAlignment="Right"
                        VerticalAlignment="Center"/>
@@ -243,7 +243,7 @@
                        Grid.ColumnSpan="3"
                        Text="MT-000001-000001"
                        FontWeight="Bold"
-                       Foreground="White"
+                       Foreground="Black"
                        FontSize="30"
                        HorizontalAlignment="Left"
                        Margin="20,0,0,0"
@@ -256,13 +256,13 @@
 
             <!--#region BOTONES -->
             <Button x:Name="btnGuardarAsignacion" 
-                    Grid.Column="3" Grid.Row="11"
-                    Grid.ColumnSpan="2" Grid.RowSpan="2"
+                    Grid.Column="3" Grid.Row="4"
+                    Grid.ColumnSpan="2" Grid.RowSpan="1"
                     Width="200" Height="45" 
-                    VerticalAlignment="Top"
+                    VerticalAlignment="Center"
                     HorizontalAlignment="Center"
                     Background="GreenYellow"
-                    Margin="5,-10,5,5"
+                    Margin="5,5,5,5"
                     Style="{DynamicResource BTNSTYLE}" 
                     Click="btnGuardarAsignacion_Click">
                     
